<resources>
    <string name="app_name">Virs</string>
    <string name="logo">logo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signin">sign in</string>
    <string name="or">or</string>
    <string name="sign_in_with_twitter">Sign In with Twitter</string>
    <string name="no_account">Do not have an account? Sign Up Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_pw">re-enter password</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign In Here</string>
    <string name="title_activity_poem_feed">PoemFeed</string>
    <string name="search_poems">Search Poems...</string>
    <string name="sign_out">sign out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="poems">Poems</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="shareicon">share_icon</string>
    <string name="snapicon">snap_icon</string>
    <string name="_43_snaps">43 Snaps</string>
    <string name="poetpic">poet_pic</string>
    <string name="misreadpoet">misreadpoet</string>
    <string name="chev">chevron</string>
    <string name="roses_are_red_in_the_sky_violets_are_blue_in_the_ocean_come_to_me_where_i_lay_down">roses are red in the sky
        violets are blue in the ocean
        come to me where i lay down ...</string>
    <string name="search">Search</string>
    <string name="new_poem">new_poem</string>
    <string name="live_stream">live stream</string>
    <string name="snaps">Snaps</string>
    <string name="snapped">Snapped</string>
    <string name="finish">Finish</string>
    <string name="crop_photo">Crop Photo</string>
    <string name="select">Select</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="writer_block">Writer\'s Block</string>
    <string name="title">Title</string>
    <string name="poem">poem</string>
    <string name="preview_poem">Preview Poem</string>
    <string name="poem_c">Poem</string>
    <string name="submit_new_poem">Submit New Poem</string>
    <string name="upload_poem">Upload Poem</string>
    <string name="email">email</string>
    <string name="poem_underline">poem_underline</string>
    <string name="snapped_underline">snapped_underline</string>
    <string name="user_info">User Info</string>
    <string name="choose_a_username">Choose a Username</string>
    <string name="choose_pic">Choose a profile picture</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="check">Check</string>
    <string name="edit_poem">Edit Poem</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back">Back</string>
    <string name="search_events">Search Events</string>
    <string name="ex_20">Ex: 20</string>
    <string name="within_miles">Within how many miles?</string>
    <string name="events_near_you">Events Near You</string>
    <string name="enter_mile_radius_ex_20">Enter Mile Radius (ex. 20)</string>
    <string name="image_for_venue">image for venue</string>
    <string name="get_directions">Get Directions</string>
    <string name="live">LIVE</string>
    <string name="switch_camera_view">switch camera view button</string>
    <string name="start_stream">Start Stream</string>
    <string name="end">End Stream</string>
    <string name="x">X</string>
    <string name="text_to_share">text to image share</string>
</resources>
