<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/poet_image"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/virsPurple"
        android:src="@drawable/virsicon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/poet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misreadpoet"
        android:textSize="18sp"
        android:textColor="@color/virsPurple"
        app:layout_constraintLeft_toRightOf="@+id/poet_image"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp" />

    <ImageView
        android:contentDescription="@string/chev"
        android:id="@+id/chevron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chevronright"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/poem_preview"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:text="@string/roses_are_red_in_the_sky_violets_are_blue_in_the_ocean_come_to_me_where_i_lay_down"
        android:layout_marginTop="11dp"
        android:textSize="16sp"
        android:maxLength="90"
        android:textColor="@color/preview_poem"
        app:layout_constraintTop_toBottomOf="@+id/poet_name"
        app:layout_constraintLeft_toRightOf="@+id/poet_image"
        android:layout_marginStart="32dp"
        app:layout_constraintRight_toLeftOf="@+id/chevron"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.727" />

    <ImageButton
        android:contentDescription="@string/snapicon"
        android:id="@+id/snap_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/snap"
        android:layout_marginTop="14dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/poem_preview"
        android:layout_marginStart="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:contentDescription="@string/shareicon"
        android:id="@+id/twitter_share"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/twittershare"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/poem_preview"
        android:layout_marginEnd="120dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/snap_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_43_snaps"
        android:textSize="17sp"
        app:layout_constraintLeft_toRightOf="@+id/snap_icon"
        android:layout_marginStart="0dp"
        app:layout_constraintRight_toLeftOf="@+id/twitter_share"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/poem_preview"
        app:layout_constraintHorizontal_bias="0.1" />

    <TextView
        android:id="@+id/share_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="17sp"
        app:layout_constraintLeft_toRightOf="@+id/twitter_share"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/poem_preview" />


</android.support.constraint.ConstraintLayout>