<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gheggie.virs.LoginActivity"
    android:background="@drawable/loginbg">

    <ImageView
        android:id="@+id/logo_view"
        android:layout_width="142dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/virslogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.468" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_layout2"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toBottomOf="@+id/logo_view"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" >

        <EditText
            android:id="@+id/username_field2"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:ems="10"
            android:background="@color/editTextbackground"
            android:textColor="@color/virsPurple"
            android:inputType="textPersonName"
            android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout2"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/username_layout2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/password_field2"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/password"
            android:background="@color/editTextbackground"
            android:textColor="@color/virsPurple"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/re_password_layout"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/password_layout2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/re_password_field"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/confirm_pw"
            android:background="@color/editTextbackground"
            android:textColor="@color/virsPurple"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:theme="@style/AppTheme.PurpleButton"
        android:id="@+id/sign_up_button"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_here" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/virsPurple"
        android:text="@string/already_have_an_account_sign_in_here"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:id="@+id/sign_in_here"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>