<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gheggie.virs.MainActivity">

    <android.support.v7.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/search_toolbar"
        android:background="@color/whiteColor"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:elevation="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/live_stream"
                android:contentDescription="@string/live_stream"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/record"
                android:background="@android:color/transparent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/poem_search"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:hint="@string/search_poems"
                android:textColor="@color/virsPurple"
                android:layout_marginStart="0dp"
                android:background="@color/searchBarColor"
                app:layout_constraintRight_toLeftOf="@+id/write_poem"
                android:layout_marginRight="8dp"
                app:layout_constraintLeft_toRightOf="@+id/live_stream"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <ImageButton
                android:id="@+id/write_poem"
                android:contentDescription="@string/new_poem"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/pen"
                android:background="@android:color/transparent"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/poet_screen_title"
        android:background="@color/whiteColor"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:elevation="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:visibility="gone">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/poet_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blackColor"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                app:layout_constraintRight_toLeftOf="@+id/sign_out"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageButton
                android:id="@+id/sign_out"
                android:contentDescription="@string/sign_out"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/logout"
                android:background="@android:color/transparent"
                android:layout_marginEnd="18dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/search_toolbar" />

    <android.support.design.widget.TabLayout
        android:layout_width="395dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tabLayout">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/bookpurple"
            android:text="@string/poems" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/calendarblack"
            android:text="@string/events" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:text="@string/profile" />
    </android.support.design.widget.TabLayout>


</android.support.constraint.ConstraintLayout>
