<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gheggie.virs.PoemActivity">

    <android.support.v7.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/poem_bar"
        android:background="@color/whiteColor"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:elevation="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_poem"
                android:contentDescription="@string/live_stream"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/arrow"
                android:background="@android:color/transparent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poem_c"
                android:textColor="@color/blackColor"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/back_poem"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.421"
                app:layout_constraintVertical_bias="0.454"
                android:layout_marginEnd="8dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user_image"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:civ_border_width="0.5dp"
        app:civ_border_color="@color/virsPurple"
        android:src="@drawable/virsicon"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/poem_bar" />

    <TextView
        android:id="@+id/title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/blackColor"
        app:layout_constraintLeft_toRightOf="@+id/user_image"
        android:layout_marginStart="35dp"
        app:layout_constraintTop_toBottomOf="@+id/poem_bar"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/by_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:maxLength="90"
        android:textColor="@color/blackColor"
        app:layout_constraintLeft_toRightOf="@+id/user_image"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title_name" />

    <TextView
        android:id="@+id/when_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:maxLength="90"
        android:textColor="@color/blackColor"
        app:layout_constraintLeft_toRightOf="@+id/user_image"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/by_text" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/poem_scroll_view"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/poem_snap"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintVertical_bias="0.13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_poem"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/blackColor"
                android:paddingBottom="8dp"/>
    </ScrollView>

    <ImageButton
        android:contentDescription="@string/snapicon"
        android:id="@+id/poem_snap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/upload_poem" />

    <ImageButton
        android:contentDescription="@string/shareicon"
        android:id="@+id/poem_share"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toRightOf="@+id/user_snaps"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/upload_poem" />

    <TextView
        android:id="@+id/user_snaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_43_snaps"
        android:textSize="17sp"
        android:textColor="@color/blackColor"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toRightOf="@+id/poem_snap"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/upload_poem" />

    <TextView
        android:id="@+id/share_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="17sp"
        android:textColor="@color/blackColor"
        app:layout_constraintLeft_toRightOf="@+id/poem_share"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/upload_poem" />

    <Button
        android:theme="@style/AppTheme.PurpleButton"
        android:id="@+id/upload_poem"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/upload_poem"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
